name:                TheCelloScroll
version:             0.0.0.1
synopsis:            Angela Beidler's personal site.
homepage:            www.angelabeidler.com
license:             GPL-2
license-file:        LICENSE
author:              Michael Beidler
maintainer:          michael.beidler@gmail.com    
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable TheCelloScroll
  main-is:
    Site.hs
  build-depends:
    base       >=4.7     && <4.8,
    blaze-html >= 0.5    && < 0.8,
    hakyll     >= 4.5
  default-language: 
    Haskell2010